--- a/Thesis.ipynb
+++ b/Thesis.ipynb
@@ -30,27 +30,15 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "vZeeM1C9iwEO"
+      },
       "source": [
         "##The Hounsfield Unit (HU)\n",
         "The Hounsfield Unit (HU) is a standardized scale used in medical imaging, particularly in computed tomography (CT) scans, to quantify the radiodensity of tissues within the body. It was introduced by Sir Godfrey Hounsfield, the inventor of the CT scanner.\n",
         "\n",
-        "The Hounsfield Unit scale is a numerical scale where water has a value of 0 Hounsfield Units, and values are assigned to different tissues based on their relative radiodensity compared to water. For example, tissues that are denser than water (such as bone) will have positive Hounsfield Unit values, while less dense tissues (like air-filled spaces) will have negative values.\n",
-        "\n",
-        "Here are some common examples of tissues and their corresponding Hounsfield Unit values:\n",
-        "\n",
-        "Air: Approximately -1000 HU\n",
-        "Water: 0 HU\n",
-        "Fat: Around -50 to -100 HU\n",
-        "Soft tissues (e.g., muscles, organs): Typically between 20 to 100 HU\n",
-        "Blood: About 30 to 70 HU\n",
-        "Bone: Much higher values, ranging from a few hundred to over a thousand HU\n",
-        "The Hounsfield Unit scale is crucial in interpreting CT scans, as it allows radiologists and other healthcare professionals to differentiate between different types of tissues and detect abnormalities. For instance, it helps identify fractures in bones, locate tumors, assess the presence of fluid or air in body cavities, and more.\n",
-        "\n",
-        "Keep in mind that while the Hounsfield Unit scale is a valuable tool in medical imaging, it is not a direct measurement of tissue composition. Instead, it provides a relative measure of radiodensity that helps in the interpretation of images."
-      ],
-      "metadata": {
-        "id": "vZeeM1C9iwEO"
-      }
+        "The Hounsfield Unit scale is a numerical scale where water has a value of 0 Hounsfield Units, and values are assigned to different tissues based on their relative radiodensity compared to water. For example, tissues that are denser than water (such as bone) will have positive Hounsfield Unit values, while less dense tissues (like air-filled spaces) will have negative values."
+      ]
     },
     {
       "cell_type": "code",
@@ -150,15 +138,15 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# testing for one patient\n",
-        "patient_id = 'AMC-015'"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "gYe5P033j0TN"
       },
-      "execution_count": 1,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# testing for one patient\n",
+        "patient_id = 'AMC-015'"
+      ]
     },
     {
       "cell_type": "code",
