--- a/Thesis.ipynb
+++ b/Thesis.ipynb
@@ -148,10 +148,10 @@
       ],
       "source": [
         "stacked_x = []\n",
-        "#for patient_id in patients:\n",
-        "patient_slices = load_scan(patient_id) # Reads the dicom files\n",
-        "stacked_slices = get_pixels_hu(patient_slices) # Convert to Hounsfield Unit\n",
-        "stacked_x.append(torch.tensor(stacked_slices)) # Stacking the images to make a 4D tensor\n",
+        "for patient_id in patients:\n",
+        "    patient_slices = load_scan(patient_id) # Reads the dicom files\n",
+        "    stacked_slices = get_pixels_hu(patient_slices) # Convert to Hounsfield Unit\n",
+        "    stacked_x.append(torch.tensor(stacked_slices)) # Stacking the images to make a 4D tensor\n",
         "\n",
         "stacked_x = np.array(torch.stack(stacked_x))\n",
         "stacked_x.shape"
