--- a/Thesis.ipynb
+++ b/Thesis.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "id": "AIV4ObWVhoaM"
       },
@@ -36,7 +36,8 @@
         "import os\n",
         "import scipy.ndimage\n",
         "import matplotlib.pyplot as plt\n",
-        "import torch"
+        "import torch\n",
+        "from skimage.transform import resize"
       ]
     },
     {
@@ -53,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "id": "TZUN3xlOhoaN"
       },
@@ -105,13 +106,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "id": "UWKkJpgfhoaN"
       },
       "outputs": [],
       "source": [
-        "input_folder='/Volumes/TEST'\n",
+        "input_folder='/Users/tatz/Desktop/Docs/Study/Sem3/Thesis/Data'\n",
+        "# input_folder='/Volumes/TEST'\n",
         "# Loads the patients folder names (which are also the patient Ids)\n",
         "patients = [f for f in os.listdir(input_folder) if f[0] != '.']\n",
         "patients.sort()"
@@ -119,17 +121,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
         "# testing for one patient\n",
-        "patient_id = 'AMC-015'"
+        "patient_id = 'R01-153'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "id": "ZWbwvT_phoaO",
         "outputId": "89267d80-7b69-4ec2-b219-23e000dd6a68"
@@ -138,10 +140,10 @@
         {
           "data": {
             "text/plain": [
-              "(1, 253, 512, 512)"
+              "(1, 350, 512, 512)"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -150,7 +152,8 @@
         "stacked_x = []\n",
         "for patient_id in patients:\n",
         "    patient_slices = load_scan(patient_id) # Reads the dicom files\n",
-        "    stacked_slices = get_pixels_hu(patient_slices) # Convert to Hounsfield Unit\n",
+        "    stacked_slices_or = get_pixels_hu(patient_slices) # Convert to Hounsfield Unit\n",
+        "    stacked_slices = resize(stacked_slices_or, (350, 512, 512))\n",
         "    stacked_x.append(torch.tensor(stacked_slices)) # Stacking the images to make a 4D tensor\n",
         "\n",
         "stacked_x = np.array(torch.stack(stacked_x))\n",
@@ -159,12 +162,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "gYe5P033j0TN"
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(341, 512, 512)"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "stacked_slices.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {},
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(1, 253, 512, 512)"
+            ]
+          },
+          "execution_count": 40,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "t_image.shape"
+      ]
     },
     {
       "cell_type": "code",
