--- a/Thesis.ipynb
+++ b/Thesis.ipynb
@@ -28,6 +28,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Import Necessary Libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -120,6 +127,7 @@
       "source": [
         "input_folder='/Volumes/TEST'\n",
         "# input_folder='/Volumes/TEST'\n",
+        "\n",
         "# Loads the patients folder names (which are also the patient Ids)\n",
         "patients = [f for f in os.listdir(input_folder) if f[0] != '.']\n",
         "patients.sort()"
@@ -516,6 +524,8 @@
         }
       ],
       "source": [
+        "# View the folder path format for a particular patient\n",
+        "\n",
         "a = [f for f in os.listdir(f'{input_folder}/{patient_id}') if f[0] != '.'][0]\n",
         "b = [f for f in os.listdir(f'{input_folder}/{patient_id}/{a}') if f[0] != '.'][0]\n",
         "path = f'{input_folder}/{patient_id}/{a}/{b}'\n",
@@ -544,6 +554,7 @@
       ],
       "source": [
         "# testing for 4 patient. Hide this code block when not testing in local machine\n",
+        "\n",
         "patients=['AMC-001','AMC-002','AMC-003','AMC-004']\n",
         "patients.sort()\n",
         "labels = np.array([1,0,0,0])\n",
@@ -569,14 +580,22 @@
         }
       ],
       "source": [
+        "# Stack all the slices of all the patients in a 3D shape which can be fed to a 3D CNN\n",
+        "\n",
         "stacked_x = []\n",
         "\n",
         "for patient_id in patients:\n",
-        "    patient_slices = load_scan(patient_id) # Reads the dicom files\n",
-        "    stacked_slices_or = get_pixels_hu(patient_slices) # Convert to Hounsfield Unit\n",
+        "    # Reads the dicom files\n",
+        "    patient_slices = load_scan(patient_id) \n",
+        "    # Convert to Hounsfield Unit\n",
+        "    stacked_slices_or = get_pixels_hu(patient_slices) \n",
+        "    # Resize (interpolation/extrapolation) so that the number of slices of all patients become equal\n",
+        "    # This is very crucial else we cannot form a tensor due to dimentional errors\n",
         "    stacked_slices = resize(stacked_slices_or, (350, 512, 512))\n",
-        "    stacked_x.append(torch.tensor(stacked_slices)) # Stacking the images to make a 4D tensor\n",
+        "    # Stacking the images to make a 4D tensor (no of patients, no of samples per patient, height, width )\n",
+        "    stacked_x.append(torch.tensor(stacked_slices)) \n",
         "\n",
+        "# converting to a numpy array\n",
         "stacked_x = np.array(torch.stack(stacked_x))\n",
         "stacked_x.shape"
       ]
@@ -611,7 +630,9 @@
         }
       ],
       "source": [
-        "plt.imshow(stacked_x[3,200,:,:])"
+        "# Showing the 300th slice for AMC-001 patient. Remember the total number of slices for AMC-001 is 253. Hence\n",
+        "# this image is an interpolated image\n",
+        "plt.imshow(stacked_x[1,300,:,:])"
       ]
     },
     {
@@ -623,6 +644,8 @@
       },
       "outputs": [],
       "source": [
+        "# Showing a plot of 40 consecutive images\n",
+        "\n",
         "f, axarr = plt.subplots(\n",
         "        4,\n",
         "        10,\n",
@@ -659,6 +682,8 @@
         }
       ],
       "source": [
+        "# Loading the labels for all patients CT scans. The CT scans which have \"Recurrence\" possibility has been marked as \n",
+        "# 1 else 0\n",
         "df = pd.read_csv('labels.csv')\n",
         "labels = np.array([1 if d == 'yes' else 0 for d in df['Recurrence']])\n",
         "labels.shape"
@@ -672,6 +697,8 @@
       },
       "outputs": [],
       "source": [
+        "# Splitting the dataset into train and validation sets in a ratio of 3:1\n",
+        "\n",
         "x_train, x_val, y_train, y_val = train_test_split(stacked_x, labels, test_size=0.25, random_state=0)"
       ]
     },
@@ -682,6 +709,16 @@
       },
       "source": [
         "## Data Preprocessing (To be done)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Preprocessing steps on every CT scan slices\n",
+        "# example normalization, rotation etc"
       ]
     },
     {
